--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "npm install && vite preview",
+    "start": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-    "@tsconfig/svelte": "^2.0.1",
+    "@tsconfig/svelte": "^2.0.1"
+  },
+  "dependencies": {
+    "axios": "^0.21.4",
+    "svelte-routing": "^1.6.0",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
     "svelte-preprocess": "^4.7.2",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
-  },
-  "dependencies": {
-    "axios": "^0.21.4",
-    "svelte-routing": "^1.6.0"
   }
 }
