--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite preview --host",
+    "start": "vite serve --host",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
