--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "vite serve --host",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
-  "devDependencies": {
-    "@tsconfig/svelte": "^2.0.1"
-  },
   "dependencies": {
+    "@tsconfig/svelte": "^2.0.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "axios": "^0.21.4",
     "svelte-routing": "^1.6.0",
